# shape-complementarity

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  release.yml
benchmark/: speed.py
python/pysc/: __init__.py  batch.py  io.py
python/shape_complementarity/: __init__.py  batch.py  io.py
src/: lib.rs
tests/: conftest.py  test_batch.py  test_boltzgen.py  test_core.py  test_format_equivalence.py  test_io.py  test_parity.py  test_rosetta_validation.py
validation/: rosetta_interface_sc.py
