[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "pysc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "biopython>=1.83"]
license = {text = "MIT"}
description = "PyO3 bindings to sc-rs for Lawrence-Colman Shape Complementarity"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pysc._core"

[project.urls]
Homepage = "https://github.com/aarteixeira/pysc"
Repository = "https://github.com/aarteixeira/pysc"
"Bug Tracker" = "https://github.com/aarteixeira/pysc/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
