[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "shape-complementarity"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "biopython>=1.83", "pandas>=2.0"]
license = {text = "MIT"}
description = "PyO3 bindings to sc-rs for Lawrence-Colman Shape Complementarity"

[tool.maturin]
features = ["pyo3/extension-module", "pyo3/abi3-py310"]
python-source = "python"
module-name = "shape_complementarity._core"

[project.urls]
Homepage = "https://github.com/aarteixeira/shape-complementarity"
Repository = "https://github.com/aarteixeira/shape-complementarity"
"Bug Tracker" = "https://github.com/aarteixeira/shape-complementarity/issues"

[project.optional-dependencies]
test = [
    "biotite>=1.5,<2",
    "maturin>=1.5",
    "pytest>=8,<10",
    "pytest-timeout>=2.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "rosetta: optional PyRosetta validation tests",
]
